# valter-25

./: .dircontxtignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  GEMINI.md  Justfile  LICENCE  PLAN-2.md  PLAN-3.md  PLAN.md  README.md  ROADMAP.md  VISION.md  WHITEPAPER.md  dev.sh  meta.yaml  package-lock.json  run.sh  rustfmt.toml  strata.config  strata.db  temp  valter.config.example  valter.db-shm  valter.db-wal  valter.dev.config
.github/workflows/: ci.yml  release.yml  sync-repo.yml
DEV/: test.txt
DEV/Project_Phoenix/: README.md  meta.yaml
DEV/Project_Phoenix/INTERNAL/WorkOrders/: task_01.yaml
DEV/Project_Phoenix/SRC/: main.rs
VALTER-INTERNAL/ARCHITECTURE/: 001-upravljanje-konfiguracijom.md  002-testiranje.md  003-testiranje-ovisnosti-o-artefaktima.md
VALTER-INTERNAL/GUIDES/: RUST-STYLE-GUIDES.md
VALTER-INTERNAL/RADNI-NALOZI/: 001-setup.md
app/: package.json  pnpm-lock.yaml
app/src/: App.tsx  api.ts  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src/components/: ActionCenter.tsx  DynamicTable.tsx  EntityForm.tsx  Layout.tsx
app/src/pages/: DashboardHome.tsx  EntityDetail.tsx  EntityList.tsx
core/: Cargo.toml  build.rs
core/src/: aggregator.rs  api.rs  cloud.rs  config.rs  context_engine.rs  fs_writer.rs  lib.rs  main.rs  oracle.rs  processor.rs  watcher.rs
core/tests/: config_loading.rs
dashboard/: index.html  package.json
dashboard/src/: App.tsx  api.ts  index.css
dashboard/src/components/: ActionCenter.tsx
dev-projects-folder/demo-island/: meta.yaml
dev-projects-folder/demo-island/Project_Phoenix/INTERNAL/Finances/: invoice_001.yaml  offer_101.yaml
src/: aggregator.rs  api.rs  cloud.rs  config.rs  context_engine.rs  main.rs  oracle.rs  processor.rs  watcher.rs
tools/: test-app.sh  test-env-config.sh
web/: package-lock.json
web/src/: App.tsx  api.ts  types.ts
web/src/components/: ActionCenter.tsx  DynamicTable.tsx
website/: package.json  pnpm-lock.yaml
website/scripts/: sync-docs.js
website/src/content/: config.ts
website/src/content/docs/: index.md  roadmap.md
website/src/data/: version.json
website/src/layouts/: Layout.astro
website/src/pages/: [...slug].astro
