[package]
name = "strata"
version = "0.5.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
notify = "6.1"
rusqlite = { version = "0.30", features = ["bundled"] }
axum = "0.8"
async-graphql = "7.0"
async-graphql-axum = "7.0" 
tokio-stream = "0.1"
ignore = "0.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
regex = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
walkdir = "2.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dotenv = "0.15"
chrono = "0.4"
glob = "0.3"
strsim = "0.10"

