# Cargo.toml

[workspace]
resolver = "2"
members = ["core", "app/src-tauri"]

# Centralna konfiguracija za linting u cijelom radnom prostoru
[workspace.lints.clippy]
# ISPRAVAK: Dajemo grupi niži prioritet kako bismo mogli nadjačati pojedina pravila
pedantic = { level = "allow", priority = -1 }

# Tretiraj ove česte, ali ponekad "bučne" lintove kao upozorenja.
# U CI-ju će i dalje biti tretirani kao greške.
module_name_repetitions = "warn"
too_many_lines = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

# Tretiraj ove ozbiljne probleme uvijek kao greške (deny).
# Ova pravila sada imaju viši prioritet (0) i ispravno će se primijeniti.
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.dependencies]
# Zajedničke
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "io-util",
  "sync",
  "process",
  "time",
  "signal",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
log = "0.4"
anyhow = "1.0"
chrono = "0.4"
dotenvy = "0.15"

# Tauri specifične (ali definirane ovdje za red)
tauri = { version = "2.9.5", features = [] }
tauri-build = { version = "2.5.3", features = [] }
tauri-plugin-shell = "2.3.3"
