[package]
name = "valter"
version = "0.1.0"
edition = "2021"

[lib]
name = "valter_core"
path = "src/lib.rs"

[[bin]]
name = "valter"
path = "src/main.rs"

# Build skripta se definira samo jednom, na nivou paketa.
build = "build.rs"

[build-dependencies]
dotenvy = "0.15"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
notify = "6.1"
rusqlite = { version = "0.30", features = ["bundled"] }
axum = "0.8"
async-graphql = "7.0"
async-graphql-axum = "7.0"
tokio-stream = "0.1"
ignore = "0.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "chrono",
  "time",
  "local-time",
] }
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
regex = "1.0"
tower-http = { version = "0.5", features = ["cors", "fs"] }
walkdir = "2.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dotenv = "0.15"
dotenvy = "0.15"
chrono = "0.4"
glob = "0.3"
strsim = "0.10"
clap = { version = "4.4", features = ["derive"] }
nix = { version = "0.27", features = ["signal"] }
rust-embed = "8.0"
mime_guess = "2.0"

# Ovisnosti koje se koriste SAMO za pokretanje testova (`cargo test`)
[dev-dependencies]
tempfile = "3.10.1"
mockall = "0.12.1"
