[package]
name = "valter"
version = "0.1.0"
edition = "2021"

build = "build.rs"


[lib]
name = "valter_core"
path = "src/lib.rs"


[[bin]]
name = "valter"
path = "src/main.rs"


[build-dependencies]
dotenvy = { workspace = true }

[dependencies]
# Nasljeđujemo iz workspacea
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }

# Ostale specifične za core ostaju kako jesu (nismo ih micali u root jer ih app ne koristi)
serde_yaml = "0.9"
notify = "6.1"
rusqlite = { version = "0.30", features = ["bundled"] }
axum = "0.8"
async-graphql = "7.1"
async-graphql-axum = "7.1"
ignore = "0.4"
uuid = { version = "1.19", features = ["v4", "fast-rng"] }
regex = "1.12"
tower-http = { version = "0.5", features = ["cors", "fs"] }
walkdir = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
glob = "0.3"
strsim = "0.10"
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.27", features = ["signal"] }
rust-embed = "8.9"
mime_guess = "2.0"

[dev-dependencies]
tempfile = "3.24.0"
mockall = "0.12.1"
