[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Nasljeđujemo iz workspacea
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-log = { workspace = true }

# Specifične
valter = { path = "../../core" }
open = "5.3.3"
